# triadb

./: DEMO.rst  INSTALLATION.rst  LICENSE.txt  MANIFEST.in  README.rst  TUTORIAL.rst  clean.sh  setup.cfg
triadb/: NOTICE.txt  __init__.py  clients.py  connectors.py  exceptions.py  meta_models.py  meta_schema.py  mis.py  requirements_conda.txt  requirements_pip.txt  subsystems.py  utils.py
triadb/data/DataModels/: Bicycle Trips 2010-2018.json  Northwind.json  Physician CMS.json  SPC.json  SPC_ALL.json
triadb/data/FlatFiles/SupplierPartCatalog/: spc_catalog.tsv  spc_parts.tsv  spc_suppliers.tsv
triadb/data/MySQLDumps/: dump-Northwind8Entities-201909061113.sql  dump-SPC-201909050814.sql
triadb/data/XMLConfig/: config.xml  users.xml
triadb/test_cases/Northwind/: Northwind_ASERD.py  Northwind_aset_count.py  Northwind_aset_ops.py  Northwind_hacol_ops.py
triadb/test_cases/Northwind/Apps/: Northwind_Scenario1_dashboard.py
triadb/test_cases/Northwind/Notebooks/: Northwind Scenario1.ipynb
triadb/test_cases/SPC/: SPC_ASERD.py  SPC_MYSQL_mapping_loading.py  SPC_aset_count.py  SPC_aset_ops.py  SPC_association_construct.py  SPC_hacol_ops.py
triadb/test_modules/: ConnectionPool.py  ETL_json_model_Northwind.py  ETL_json_model_SPC.py  MIS_DMS_add_DataModel_with_commands.py  MIS_DMS_get.py  MIS_DRS_get.py  MIS_get_clickhouse_engines_info.py  MIS_populate_systems.py  MMC_add_DataModels_with_commands.py  MMC_add_DataSets.py  MMC_get.py  MMC_rebuild.py
triadb/triaclick/: LICENSE.md  NOTICE.txt  README.md  __init__.py  engine.py  generative.py  hacol.py  haset.py  hgraph.py
(+2 files in other folders)
