[metadata]

name = triadb
version = 0.9.0

author = Athanassios I. Hatzis
author_email = hatzis@healis.eu

description = TRIADB - Self-Service Data Management and Analytics Framework
long_description = TRIADB - Self-Service Data Management and Analytics Framework
license = Default license AGPL and TriaClick Open Source License Agreement
license_files = LICENSE.txt

url = http://healis.eu/triadb

keywords = 
	database engine
	self-service BI
	business intelligence
	analytics
	framework
	graph database
	information analysis
	visualization

platforms = Linux

classifiers=
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Environment :: Web Environment
	Framework :: IPython
	Framework :: Jupyter
	Framework :: Flask
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	License :: Free For Home Use
	License :: Free for non-commercial use
	License :: Freely Distributable
	License :: Free To Use But Restricted
	License :: OSI Approved :: GNU Affero General Public License v3
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Application Frameworks
	Topic :: Database :: Database Engines/Servers
	Topic :: Database :: Front-Ends	
	Topic :: Scientific/Engineering :: Information Analysis
	Topic :: Scientific/Engineering :: Visualization


[options]
include_package_data = True
packages = find:
python_requires = >= 3.7

[options.extras_require]
